# urfu-fp-intro-20

./: .gitignore  urfufpcourse20.cabal
src/: Lecture07.hs  Lecture08.hs  Lecture09.hs  Lecture10.hs  Lecture11.hs  Lecture12.hs  Lecture13.hs  Lecture13.idr
src/Lecture10/: Reader.hs  WriterImplementation.hs
src/Lecture11/: PersonsT.hs
src/Lecture12/: README.md  bookmovie.cabal  bookmovie.db  cabal.project  seeds.sql
src/Lecture12/src/: API.hs  App.hs  Handlers.hs  Runner.hs  Server.hs  Utils.hs
src/Lecture12/src/API/: Checkout.hs  Preliminary.hs  Session.hs
src/Lecture12/src/DB/: Booking.hs  Internal.hs  MovieSession.hs  Preliminary.hs  Seat.hs
test/: Lecture10Spec.hs  Lecture11Spec.hs  Lecture13Spec.hs
